examples/errors/child.vm
## Parse error
#set(4 = $a)
